solve * too high

--- a/_sass/layout/_publications.scss
+++ b/_sass/layout/_publications.scss
@@ -97,10 +97,12 @@
 }
 
 .publication-entry__authors sup {
-  font-size: 0.9em;
+  font-size: 0.75em;
   font-weight: 700;
   line-height: 0;
-  vertical-align: super;
+  vertical-align: baseline;
+  position: relative;
+  top: -0.35em;
   margin-left: 0.05em;
 }
 
